# solarsim

./: README.md  pyproject.toml
examples/: example.py  nyc.py
src/solarsim/: __init__.py  plant.py  simulator.py
tests/: test_plant.py  test_simulator.py
