[project]
name = "solarsim"
version = "0.1.0"
description = "Libary for simulating solar power plants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "twine>=6.0.1",
    "uncertainties>=3.2.2",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]



